--- a/views/dashboard-seller.pug
+++ b/views/dashboard-seller.pug
@@ -5,7 +5,7 @@ block content
   
   //- Profile Section
   div#profile-section
-    img.profile-pic(src=user.profilePicture || '/img/default-profile.png', alt='Profile Picture', style='cursor:pointer;')
+    img.profile-pic(src=user.profilePicture || '/img/profile.png', alt='Profile Picture', style='cursor:pointer;')
     h2#seller-dashboard-title Seller Dashboard
     p#welcome-message Welcome, #{user.firstName}! Here you can manage your properties and add new listings.
 
